Treat the preview dialog as a non-modal dialog.

There was no point in calling exec() here, just call show() and be
happy.

BUG: 216601

svn path=/trunk/KDE/kdeutils/ark/; revision=1067160